--- a/src/index.html
+++ b/src/index.html
@@ -160,10 +160,10 @@
     <footer>
         <div class="footer-bottom">
             <div class="footer-menu">
-                <a href="">Home</a>
-                <a href="">Campeonatos</a>
-                <a href="">Calendário</a>
-                <a href="">Perfil</a>
+                <a href="/src/index.html">Home</a>
+                <a href="/src/tabelaSerieA.html">Campeonatos</a>
+                <a href="/src/Calendario.html">Calendário</a>
+                <a href="/src/Perfil.html">Perfil</a>
             </div>
             <div class="copyright">
                 <p>copyright &copy; <a href="#">FutScore</a></p>
