--- a/src/Calendario.html
+++ b/src/Calendario.html
@@ -108,5 +108,18 @@
     </div>
 
 </body>
+<footer>
+    <div class="footer-bottom">
+        <div class="footer-menu">
+            <a href="">Home</a>
+            <a href="">Campeonatos</a>
+            <a href="">Calendário</a>
+            <a href="">Perfil</a>
+        </div>
+        <div class="copyright">
+            <p>copyright &copy; <a href="#">FutScore</a></p>
+        </div>
+    </div>
+</footer>
 
 </html>
