--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -36,8 +36,7 @@
             <img class="profile-photo" src="img/Profile Photo.png" alt="Profile Photo">
             <div class="profile-name">Gabriel Almeida</div>
             <ul class="profile-menu">
-                <li class="profile-menu-item">Configurações</li>
-            </ul>
+                <h5 class="text-center">Configurações</h5>
         </div>
         <div class="col-md-9">
             <div class="meuTime">
@@ -66,7 +65,7 @@
                     <div class="card-body">
                         <span class="mx-2">&emsp;Corinthians</span>
                         <img class="escudperfil" src="/src/img/Corinthians.png" alt="Flamengo">
-                        <span class="placar">2 - 2</span>
+                        <span class="placar">2 - 1</span>
                         <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
                         <span class="mx-2">Cruzeiro</span>
                     </div>
@@ -88,38 +87,53 @@
                             <h4>Oitavas de Final</h4>
                         </a>
                     </div>
-                </div>    
-                    <div class="col-md-5">
-                        <h3 class="text-center"> Próximos jogos</h3>
-                        <div class="card-body">
-                            <span class="mx-2">&emsp;Botafogo</span>
-                            <img class="escudperfil" src="/src/img/escudos/Botafogo.png" alt="Botafogo">
-                            <span class="placar"> X </span>
-                            <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
-                            <span class="mx-2">Cruzeiro</span>
-                        </div>
-                        <h5 class="text-center"> Brasileirão - 4°rodada</h5>
-                        <div class="card-body">
-                            <span class="mx-2">&emsp;Cruzeiro</span>
-                            <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
-                            <span class="placar"> X </span>
-                            <img class="escudperfil" src="/src/img/escudos/Grêmio.png" alt="Grêmio">
-                            <span class="mx-2">Grêmio</span>
-                        </div>
-                        <h5 class="text-center"> Copa do Brasil - 2° Jogo</h5>
-                        <div class="card-body">
-                            <span class="mx-2">Fluminense</span>
-                            <img class="escudperfil" src="img/escudos/Fluminense.png" alt="Fluminense">
-                            <span class="placar"> X </span>
-                            <img class="escudperfil" src="img/escudos/Cruzeiro.png" alt="Cruzeiro">
-                            <span class="mx-2">Cruzeiro</span>
-                        </div>
-                        <h5 class="text-center"> Brasileirão - 5°rodada</h5>
+                </div>
+                <div class="col-md-5">
+                    <h3 class="text-center"> Próximos jogos</h3>
+                    <div class="card-body">
+                        <span class="mx-2">&emsp;Botafogo</span>
+                        <img class="escudperfil" src="/src/img/escudos/Botafogo.png" alt="Botafogo">
+                        <span class="placar"> X </span>
+                        <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
+                        <span class="mx-2">Cruzeiro</span>
                     </div>
+                    <h5 class="text-center"> Brasileirão - 4°rodada</h5>
+                    <div class="card-body">
+                        <span class="mx-2">&emsp;Cruzeiro</span>
+                        <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
+                        <span class="placar"> X </span>
+                        <img class="escudperfil" src="/src/img/escudos/Grêmio.png" alt="Grêmio">
+                        <span class="mx-2">Grêmio</span>
+                    </div>
+                    <h5 class="text-center"> Copa do Brasil - 2° Jogo</h5>
+                    <div class="card-body">
+                        <span class="mx-2">Fluminense</span>
+                        <img class="escudperfil" src="img/escudos/Fluminense.png" alt="Fluminense">
+                        <span class="placar"> X </span>
+                        <img class="escudperfil" src="img/escudos/Cruzeiro.png" alt="Cruzeiro">
+                        <span class="mx-2">Cruzeiro</span>
+                    </div>
+                    <h5 class="text-center"> Brasileirão - 5°rodada</h5>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
+    <footer>
+        <div class="footer-bottom">
+            <div class="footer-menu">
+                <a href="">Home</a>
+                <a href="">Campeonatos</a>
+                <a href="">Calendário</a>
+                <a href="">Perfil</a>
+            </div>
+            <div class="copyright">
+                <p>copyright &copy; <a href="#">FutScore</a></p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
