--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     <div class="jogo-ida">
                         <div>
                             <div class="info">
-                                <div class="data">Ao Vivo</div>
+                                <div class="data aovivo">Ao Vivo 88'</div>
                                 <div class="local">Mineirão</div>
                             </div>
                             <div class="times">
@@ -95,7 +95,7 @@
                     <div class="jogo-volta">
                         <div>
                             <div class="info">
-                                <div class="data">Ao Vivo</div>
+                                <div class="data aovivo">Ao Vivo 88'</div>
                                 <div class="local">Neo Química Arena</div>
                             </div>
                             <div class="times">
@@ -118,7 +118,7 @@
                     <div class="jogo-ida">
                         <div>
                             <div class="info">
-                                <div class="data">Ao Vivo</div>
+                                <div class="data aovivo">Ao Vivo 23'</div>
                                 <div class="local">Allianz Parque</div>
                             </div>
                             <div class="times">
@@ -126,7 +126,7 @@
                                     Palmeiras
                                     <img src="/src/img/escudos/Palmeiras.png" alt="Palmeiras">
                                 </div>
-                                <div class="placar">2 x 3</div>
+                                <div class="placar">1 x 1</div>
                                 <div class="visitante">
                                     <img src="/src/img/escudos/Flamengo.png" alt="Flamengo">
                                     Flamengo
@@ -137,7 +137,7 @@
                     <div class="jogo-volta">
                         <div>
                             <div class="info">
-                                <div class="data">Ao Vivo</div>
+                                <div class="data aovivo">Ao Vivo 23'</div>
                                 <div class="local">Neo Química Arena</div>
                             </div>
                             <div class="times">
