--- a/src/tabelaSerieA.html
+++ b/src/tabelaSerieA.html
@@ -60,7 +60,8 @@
                 <h5>Sul Americana</h5> 
             </div>
         </div> 
-        <table id="league-table">
+        <!-- Desativado temporariamente >>  <table id="league-table"> -->
+        <table class="serieA">
             <thead>
               <tr>
                 <th>Clube</th>
@@ -76,7 +77,246 @@
               </tr>
             </thead>
             <tbody>
-              <!-- The table will be populated with data from the API -->
+                <tr>
+                    <td><span class="rank">1.</span> <span><img src="/src/img/escudos/Botafogo.png"></span> Botafogo</td>
+                    <td></td>
+                    <td>15</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>12</td>
+                    <td>4</td>
+                    <td>8</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">2.</span> <span><img src="/src/img/escudos/Palmeiras.png"></span> Palmeiras</td>
+                    <td></td>
+                    <td>14</td>
+                    <td>6</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>16</td>
+                    <td>6</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">3.</span> <span><img src="/src/img/escudos/Fluminense.png"></span> Fluminense</td>
+                    <td></td>
+                    <td>13</td>
+                    <td>6</td>
+                    <td>4</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>12</td>
+                    <td>5</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">4.</span> <span><img src="/src/img/escudos/Atlético-MG.png"></span> Atlético-MG</td>
+                    <td></td>
+                    <td>10</td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">5.</span> <span><img src="/src/img/escudos/Flamengo.png"></span> Flamengo</td>
+                    <td></td>
+                    <td>9</td>
+                    <td>6</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>3</td>
+                    <td>12</td>
+                    <td>9</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">6.</span> <span><img src="/src/img/escudos/Athletico-PR.png"></span> Athletico-PR</td>
+                    <td></td>
+                    <td>9</td>
+                    <td>5</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>5</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">7.</span> <span><img src="/src/img/escudos/Cruzeiro.png"></span> Cruzeiro</td>
+                    <td></td>
+                    <td>9</td>
+                    <td>5</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>5</td>
+                    <td>2</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">8.</span> <span><img src="/src/img/escudos/Fortaleza.png"></span> Fortaleza</td>
+                    <td></td>
+                    <td>8</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">9.</span> <span><img src="/src/img/escudos/Santos.png"></span> Santos</td>
+                    <td></td>
+                    <td>8</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">10.</span> <span><img src="/src/img/escudos/Corinthians.png"></span> Corinthians</td>
+                    <td></td>
+                    <td>8</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>5</td>
+                    <td>5</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">11.</span> <span><img src="/src/img/escudos/Goiás.png"></span> Goiás</td>
+                    <td></td>
+                    <td>8</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>-2</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">12.</span> <span><img src="/src/img/escudos/Ceara.png"></span> Ceara</td>
+                    <td></td>
+                    <td>7</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">13.</span> <span><img src="/src/img/escudos/Bahia.png"></span> Bahia</td>
+                    <td></td>
+                    <td>7</td>
+                    <td>6</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>-2</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">14.</span> <span><img src="/src/img/escudos/Internacional.png"></span> Internacional</td>
+                    <td></td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>-1</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">15.</span> <span><img src="/src/img/escudos/Vasco.png"></span> Vasco</td>
+                    <td></td>
+                    <td>6</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>-1</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">16.</span> <span><img src="/src/img/escudos/Grêmio.png"></span> Grêmio</td>
+                    <td></td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>6</td>
+                    <td>9</td>
+                    <td>-3</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">17.</span> <span><img src="/src/img/escudos/Bragantino.png"></span> Bragantino</td>
+                    <td></td>
+                    <td>4</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>11</td>
+                    <td>-6</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">18.</span> <span><img src="/src/img/escudos/Avai.png"></span> Avai</td>
+                    <td></td>
+                    <td>4</td>
+                    <td>6</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>7</td>
+                    <td>-5</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">19.</span> <span><img src="/src/img/escudos/Atlético-GO.png"></span> Atlético-GO</td>
+                    <td></td>
+                    <td>4</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>1</td>
+                    <td>9</td>
+                    <td>-8</td>
+                </tr>
+                <tr>
+                    <td><span class="rank">20.</span> <span><img src="/src/img/escudos/São Paulo.png"></span> São Paulo</td>
+                    <td></td>
+                    <td>4</td>
+                    <td>6</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>4</td>
+                    <td>9</td>
+                    <td>-5</td>
+                </tr>
             </tbody>
         </table> 
         <div id="loading-spinner" class="d-none">
@@ -88,6 +328,10 @@
 </body>
 
 <script>
+    /*
+    API para a tabela do campeonato brasileiro
+    Atualmente desativada, pois a API não está funcionando
+
     const apiKey = 'Pvb4g3p2EhGipAUwu7s2N8fj7cG3IdOKyqhtgdsE69RtzJGdy3iXPHYpAWH6'; 
     const endpoint1 = 'https://api.sportmonks.com/v3/football/standings/live/leagues/648?include=participant';
     const endpoint2 = 'https://api.sportmonks.com/v3/football/standings/live/leagues/648?include=details';
@@ -170,6 +414,8 @@
     }).catch(error => {
       console.error('Error fetching data:', error);
     });
+
+    */
 </script>
 
 
