--- a/src/criação.html
+++ b/src/criação.html
@@ -16,21 +16,22 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
   </head>
- <body class="login-bg">
-  <div class="page-container">
-    <div class="login-container">
-      <h1 class="h1-log">Conectar-se</h1>
-      <form>
-        <label class="label-a" for="email"></label>
-        <input type="text" id="email" placeholder="E-mail" name="email" required>
-        <label class="label-a" for="password"></label>
-        <input type="password" id="password" placeholder="Senha" name="password" required>
-        <input type="submit" value="Entrar">
-      </form>
-      <h2 class="h2-log"> <a class="options-text" href="recuperar.html">Esqueceu a senha?</a></h3>
-      <h3 class="h2-rec"> <a class="options-text" href="register.html">Não tem uma conta? Cadastre-se!</a></h3>
+  <body class="login-bg">
+    <div class="page-container">
+      <div class="login-container">
+        <h1 class="h1-reg">Cadastre-se</h1>
+        <form>
+          <label class="label-a" for="email"></label>
+          <input type="text" id="email" placeholder="E-mail" name="email" required>
+          <label class="label-a" for="password"></label>
+          <input type="password" id="password" placeholder="Senha" name="password" required>
+          <label class="label-a" for="password"></label>
+          <input type="password" id="password" placeholder="Digite a senha novamente" name="password" required>
+          <input type="submit" value="Cadastrar">
+        </form>
+        <h2 class="h2-rec"> <a class="options-text" href="login.html">Já tem uma conta? Faça o login</a></h2>
+      </div>
     </div>
-  </div>
-</body>
   </body>
-</html>
+    </body>
+  </html>
