--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -62,7 +62,7 @@
                         <img class="escudperfil" src="/src/img/escudos/Cruzeiro.png" alt="Cruzeiro">
                         <span class="mx-2">Cruzeiro</span>
                     </div>
-                    <h5 class="text-center">Copa do Brasil</h5>
+                    <h5 class="text-center">Copa do Brasil - 1° jogo</h5>
                     <div class="card-body">
                         <span class="mx-2">&emsp;Corinthians</span>
                         <img class="escudperfil" src="/src/img/Corinthians.png" alt="Flamengo">
