--- a/src/Layout.html
+++ b/src/Layout.html
@@ -27,7 +27,7 @@
                         <li><a href="/src/tabelaSerieA.html">Campeonatos</a></li>
                         <li><a href="/src/Calendario.html">Calendário</a></li>
                         <li><a href="/src/Perfil.html">Perfil</a></li>
-                        <li><a href="#">Login</a></li>
+                        <li><a href="login.html">Login</a></li>
                     </ul>
                 </div>
             </div>
