--- a/src/tabelaCDB.html
+++ b/src/tabelaCDB.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>FutScore</title>
@@ -14,18 +17,29 @@
 
 <body>
     <header>
-        <nav>
-            <div class="container">
-                <div class="logo">
-                    <a href="/src/index.html">FutScore</a>
-                </div>
-                <div class="buttons">
-                    <ul>
-                        <li><a href="/src/index.html">Home</a></li>
-                        <li><a href="/src/tabelaSerieA.html">Campeonatos</a></li>
-                        <li><a href="/src/Calendario.html">Calendário</a></li>
-                        <li><a href="/src/Perfil.html">Perfil</a></li>
-                        <li><a href="#">Login</a></li>
+        <nav class="navbar navbar-expand-lg bg-green">
+            <div class="container-fluid container TheNavBar ms-auto">
+                <a class="navbar-brand" href="#">FutScore</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" style="display: flex; justify-content: center; align-items: center;"><i class="ri-menu-line"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html" style="font-size: 20px; font-weight: 500;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="tabelaSerieA.html" style="font-size: 20px; font-weight: 500;">Campeonatos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Calendario.html" style="font-size: 20px; font-weight: 500;">Calendário</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Perfil.html" style="font-size: 20px; font-weight: 500;">Perfil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html" style="font-size: 20px; font-weight: 500;">Login</a>
+                    </li>
                     </ul>
                 </div>
             </div>
@@ -73,6 +87,19 @@
             </div>
         </div>
     </div>
+    <footer class="stickyFooter">
+        <div class="footer-bottom">
+            <div class="footer-menu">
+                <a href="/src/index.html">Home</a>
+                <a href="/src/tabelaSerieA.html">Campeonatos</a>
+                <a href="/src/Calendario.html">Calendário</a>
+                <a href="/src/Perfil.html">Perfil</a>
+            </div>
+            <div class="copyright">
+                <p>copyright &copy; <a href="#">FutScore</a></p>
+            </div>
+        </div>
+    </footer>
 
     <script>
         function renderMatches(data, targetId) {
@@ -212,6 +239,7 @@
         updateCurrentStageTitle(); // Atualize o título da fase atual inicialmente
         fetchMatches(gameStages[currentStageIndex].endpoint);
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 
 </html>
