--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,7 @@
                                 </div>
                                 <div class="placar">1 x 0</div>
                                 <div class="visitante">
-                                    <img src="/src/img/escudos/Fluminense.png" alt="Santos">
+                                    <img src="/src/img/escudos/Santos.png" alt="Santos">
                                     Santos
                                 </div>
                             </div>
