Login Links Fix

--- a/src/login.html
+++ b/src/login.html
@@ -27,8 +27,8 @@
         <input type="password" id="password" placeholder="Senha" name="password" required>
         <input type="submit" value="Entrar">
       </form>
-      <h2 class="h2-log"> <a class="options-text" href="recuperar.html">Esqueceu a senha?</a></h3>
-      <h3 class="h2-rec"> <a class="options-text" href="register.html">Não tem uma conta? Cadastre-se!</a></h3>
+      <h2 class="h2-log"> <a class="options-text" href="Recuperarsenha.html">Esqueceu a senha?</a></h3>
+      <h3 class="h2-rec"> <a class="options-text" href="criação.html">Não tem uma conta? Cadastre-se!</a></h3>
     </div>
   </div>
 </body>
