--- a/src/html/Recuperarsenha.html
+++ b/src/html/Recuperarsenha.html
@@ -25,7 +25,7 @@
           <input type="text" id="email" placeholder="E-mail" name="email" required>
           <input type="submit" value="Recuperar">
         </form>
-        <h2 class="h2-rec"> <a class="options-text" href="register.html">Não tem uma conta? Cadastre-se!</a></h2>
+        <h2 class="h2-rec"> <a class="options-text" href="criação.html">Não tem uma conta? Cadastre-se!</a></h2>
       </div>
     </div>
   </body>
