--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -13,6 +13,10 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>FutScore</title>
+    <style>
+        .containerr {
+        }
+    </style>
 </head>
 
 <body>
